# canbus_interface

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  port_setup.sh  setup.py  slcan.sh
data/: angle_data.csv  speed_data.csv
launch/: can_interface.launch
scripts/: can_node
src/: can_node  can_node.cpp
src/can_interface/: __init__.py  can_publisher.py  can_subscriber.py  data_converter.py
udev/: 99-usb-serial.rules
