<?xml version="1.0"?>
<package format="2">
  <name>can_interface</name>
  <version>0.0.0</version>
  <description>The can_interface package</description>
  <maintainer email="jacob@todo.todo">jacob</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>python-can</exec_depend>
  <exec_depend>can-utils</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>python-pandas</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
